lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> <empty>
Rule 2     start -> morestatements
Rule 3     morestatements -> statement
Rule 4     morestatements -> statement morestatements
Rule 5     morestatements -> { morestatements }
Rule 6     statement -> ifstatement
Rule 7     statement -> loop
Rule 8     statement -> expr ;
Rule 9     statement -> returnstatement ;
Rule 10    statement -> assignstatement ;
Rule 11    statement -> printstatement ;
Rule 12    statement -> BREAK ;
Rule 13    statement -> CONTINUE ;
Rule 14    returnstatement -> RETURN
Rule 15    returnstatement -> RETURN expr
Rule 16    printstatement -> PRINT printables
Rule 17    printables -> printable
Rule 18    printables -> printable , printables
Rule 19    printable -> expr
Rule 20    printable -> STRING
Rule 21    assignstatement -> assignable = expr
Rule 22    assignstatement -> assignable ASSIGNPLUS expr
Rule 23    assignstatement -> assignable ASSIGNMINUS expr
Rule 24    assignstatement -> assignable ASSIGNTIMES expr
Rule 25    assignstatement -> assignable ASSIGNDIVIDE expr
Rule 26    assignable -> ID
Rule 27    assignable -> ID [ expr , expr ]
Rule 28    expr -> assignable
Rule 29    expr -> INTNUMBER
Rule 30    expr -> FLOATNUMBER
Rule 31    expr -> - expr
Rule 32    expr -> expr '
Rule 33    expr -> specialmatrixword ( expr )
Rule 34    expr -> ( expr )
Rule 35    expr -> [ matrixinitializer ]
Rule 36    expr -> expr + expr
Rule 37    expr -> expr - expr
Rule 38    expr -> expr * expr
Rule 39    expr -> expr / expr
Rule 40    expr -> expr MPLUS expr
Rule 41    expr -> expr MMINUS expr
Rule 42    expr -> expr MTIMES expr
Rule 43    expr -> expr MDIVIDE expr
Rule 44    expr -> expr EQ expr
Rule 45    expr -> expr NEQ expr
Rule 46    expr -> expr > expr
Rule 47    expr -> expr < expr
Rule 48    expr -> expr LEQ expr
Rule 49    expr -> expr GEQ expr
Rule 50    specialmatrixword -> ZEROS
Rule 51    specialmatrixword -> ONES
Rule 52    specialmatrixword -> EYE
Rule 53    ifstatement -> IF ( expr ) morestatements
Rule 54    ifstatement -> IF ( expr ) morestatements ELSE morestatements
Rule 55    loop -> forloop
Rule 56    loop -> whileloop
Rule 57    forloop -> FOR ID = rangeoperator morestatements
Rule 58    whileloop -> WHILE ( expr ) morestatements
Rule 59    rangeoperator -> expr : expr
Rule 60    matrixinitializer -> [ innerlist ]
Rule 61    matrixinitializer -> matrixinitializer , [ innerlist ]
Rule 62    innerlist -> expr
Rule 63    innerlist -> innerlist , expr

Terminals, with rules where they appear

'                    : 32
(                    : 33 34 53 54 58
)                    : 33 34 53 54 58
*                    : 38
+                    : 36
,                    : 18 27 61 63
-                    : 31 37
/                    : 39
:                    : 59
;                    : 8 9 10 11 12 13
<                    : 47
=                    : 21 57
>                    : 46
ASSIGNDIVIDE         : 25
ASSIGNMINUS          : 23
ASSIGNPLUS           : 22
ASSIGNTIMES          : 24
BREAK                : 12
CONTINUE             : 13
ELSE                 : 54
EQ                   : 44
EYE                  : 52
FLOATNUMBER          : 30
FOR                  : 57
GEQ                  : 49
ID                   : 26 27 57
IF                   : 53 54
INTNUMBER            : 29
LEQ                  : 48
MDIVIDE              : 43
MMINUS               : 41
MPLUS                : 40
MTIMES               : 42
NEQ                  : 45
ONES                 : 51
PRINT                : 16
RETURN               : 14 15
STRING               : 20
WHILE                : 58
ZEROS                : 50
[                    : 27 35 60 61
]                    : 27 35 60 61
error                : 
{                    : 5
}                    : 5

Nonterminals, with rules where they appear

assignable           : 21 22 23 24 25 28
assignstatement      : 10
expr                 : 8 15 19 21 22 23 24 25 27 27 31 32 33 34 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 53 54 58 59 59 62 63
forloop              : 55
ifstatement          : 6
innerlist            : 60 61 63
loop                 : 7
matrixinitializer    : 35 61
morestatements       : 2 4 5 53 54 54 57 58
printable            : 17 18
printables           : 16 18
printstatement       : 11
rangeoperator        : 57
returnstatement      : 9
specialmatrixword    : 33
start                : 0
statement            : 3 4
whileloop            : 56

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> .
    (2) start -> . morestatements
    (3) morestatements -> . statement
    (4) morestatements -> . statement morestatements
    (5) morestatements -> . { morestatements }
    (6) statement -> . ifstatement
    (7) statement -> . loop
    (8) statement -> . expr ;
    (9) statement -> . returnstatement ;
    (10) statement -> . assignstatement ;
    (11) statement -> . printstatement ;
    (12) statement -> . BREAK ;
    (13) statement -> . CONTINUE ;
    (53) ifstatement -> . IF ( expr ) morestatements
    (54) ifstatement -> . IF ( expr ) morestatements ELSE morestatements
    (55) loop -> . forloop
    (56) loop -> . whileloop
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . - expr
    (32) expr -> . expr '
    (33) expr -> . specialmatrixword ( expr )
    (34) expr -> . ( expr )
    (35) expr -> . [ matrixinitializer ]
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MTIMES expr
    (43) expr -> . expr MDIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr > expr
    (47) expr -> . expr < expr
    (48) expr -> . expr LEQ expr
    (49) expr -> . expr GEQ expr
    (14) returnstatement -> . RETURN
    (15) returnstatement -> . RETURN expr
    (21) assignstatement -> . assignable = expr
    (22) assignstatement -> . assignable ASSIGNPLUS expr
    (23) assignstatement -> . assignable ASSIGNMINUS expr
    (24) assignstatement -> . assignable ASSIGNTIMES expr
    (25) assignstatement -> . assignable ASSIGNDIVIDE expr
    (16) printstatement -> . PRINT printables
    (57) forloop -> . FOR ID = rangeoperator morestatements
    (58) whileloop -> . WHILE ( expr ) morestatements
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (50) specialmatrixword -> . ZEROS
    (51) specialmatrixword -> . ONES
    (52) specialmatrixword -> . EYE

    $end            reduce using rule 1 (start -> .)
    {               shift and go to state 4
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    IF              shift and go to state 13
    INTNUMBER       shift and go to state 18
    FLOATNUMBER     shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 14
    [               shift and go to state 22
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 27
    ID              shift and go to state 26
    ZEROS           shift and go to state 28
    ONES            shift and go to state 29
    EYE             shift and go to state 30

    start                          shift and go to state 1
    morestatements                 shift and go to state 2
    statement                      shift and go to state 3
    ifstatement                    shift and go to state 5
    loop                           shift and go to state 6
    expr                           shift and go to state 7
    returnstatement                shift and go to state 8
    assignstatement                shift and go to state 9
    printstatement                 shift and go to state 10
    forloop                        shift and go to state 15
    whileloop                      shift and go to state 16
    assignable                     shift and go to state 17
    specialmatrixword              shift and go to state 21

state 1

    (0) S' -> start .



state 2

    (2) start -> morestatements .

    $end            reduce using rule 2 (start -> morestatements .)


state 3

    (3) morestatements -> statement .
    (4) morestatements -> statement . morestatements
    (3) morestatements -> . statement
    (4) morestatements -> . statement morestatements
    (5) morestatements -> . { morestatements }
    (6) statement -> . ifstatement
    (7) statement -> . loop
    (8) statement -> . expr ;
    (9) statement -> . returnstatement ;
    (10) statement -> . assignstatement ;
    (11) statement -> . printstatement ;
    (12) statement -> . BREAK ;
    (13) statement -> . CONTINUE ;
    (53) ifstatement -> . IF ( expr ) morestatements
    (54) ifstatement -> . IF ( expr ) morestatements ELSE morestatements
    (55) loop -> . forloop
    (56) loop -> . whileloop
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . - expr
    (32) expr -> . expr '
    (33) expr -> . specialmatrixword ( expr )
    (34) expr -> . ( expr )
    (35) expr -> . [ matrixinitializer ]
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MTIMES expr
    (43) expr -> . expr MDIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr > expr
    (47) expr -> . expr < expr
    (48) expr -> . expr LEQ expr
    (49) expr -> . expr GEQ expr
    (14) returnstatement -> . RETURN
    (15) returnstatement -> . RETURN expr
    (21) assignstatement -> . assignable = expr
    (22) assignstatement -> . assignable ASSIGNPLUS expr
    (23) assignstatement -> . assignable ASSIGNMINUS expr
    (24) assignstatement -> . assignable ASSIGNTIMES expr
    (25) assignstatement -> . assignable ASSIGNDIVIDE expr
    (16) printstatement -> . PRINT printables
    (57) forloop -> . FOR ID = rangeoperator morestatements
    (58) whileloop -> . WHILE ( expr ) morestatements
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (50) specialmatrixword -> . ZEROS
    (51) specialmatrixword -> . ONES
    (52) specialmatrixword -> . EYE

  ! shift/reduce conflict for { resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INTNUMBER resolved as shift
  ! shift/reduce conflict for FLOATNUMBER resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for [ resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ZEROS resolved as shift
  ! shift/reduce conflict for ONES resolved as shift
  ! shift/reduce conflict for EYE resolved as shift
    $end            reduce using rule 3 (morestatements -> statement .)
    }               reduce using rule 3 (morestatements -> statement .)
    ELSE            reduce using rule 3 (morestatements -> statement .)
    {               shift and go to state 4
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    IF              shift and go to state 13
    INTNUMBER       shift and go to state 18
    FLOATNUMBER     shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 14
    [               shift and go to state 22
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 27
    ID              shift and go to state 26
    ZEROS           shift and go to state 28
    ONES            shift and go to state 29
    EYE             shift and go to state 30

  ! {               [ reduce using rule 3 (morestatements -> statement .) ]
  ! BREAK           [ reduce using rule 3 (morestatements -> statement .) ]
  ! CONTINUE        [ reduce using rule 3 (morestatements -> statement .) ]
  ! IF              [ reduce using rule 3 (morestatements -> statement .) ]
  ! INTNUMBER       [ reduce using rule 3 (morestatements -> statement .) ]
  ! FLOATNUMBER     [ reduce using rule 3 (morestatements -> statement .) ]
  ! -               [ reduce using rule 3 (morestatements -> statement .) ]
  ! (               [ reduce using rule 3 (morestatements -> statement .) ]
  ! [               [ reduce using rule 3 (morestatements -> statement .) ]
  ! RETURN          [ reduce using rule 3 (morestatements -> statement .) ]
  ! PRINT           [ reduce using rule 3 (morestatements -> statement .) ]
  ! FOR             [ reduce using rule 3 (morestatements -> statement .) ]
  ! WHILE           [ reduce using rule 3 (morestatements -> statement .) ]
  ! ID              [ reduce using rule 3 (morestatements -> statement .) ]
  ! ZEROS           [ reduce using rule 3 (morestatements -> statement .) ]
  ! ONES            [ reduce using rule 3 (morestatements -> statement .) ]
  ! EYE             [ reduce using rule 3 (morestatements -> statement .) ]

    statement                      shift and go to state 3
    morestatements                 shift and go to state 31
    ifstatement                    shift and go to state 5
    loop                           shift and go to state 6
    expr                           shift and go to state 7
    returnstatement                shift and go to state 8
    assignstatement                shift and go to state 9
    printstatement                 shift and go to state 10
    forloop                        shift and go to state 15
    whileloop                      shift and go to state 16
    assignable                     shift and go to state 17
    specialmatrixword              shift and go to state 21

state 4

    (5) morestatements -> { . morestatements }
    (3) morestatements -> . statement
    (4) morestatements -> . statement morestatements
    (5) morestatements -> . { morestatements }
    (6) statement -> . ifstatement
    (7) statement -> . loop
    (8) statement -> . expr ;
    (9) statement -> . returnstatement ;
    (10) statement -> . assignstatement ;
    (11) statement -> . printstatement ;
    (12) statement -> . BREAK ;
    (13) statement -> . CONTINUE ;
    (53) ifstatement -> . IF ( expr ) morestatements
    (54) ifstatement -> . IF ( expr ) morestatements ELSE morestatements
    (55) loop -> . forloop
    (56) loop -> . whileloop
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . - expr
    (32) expr -> . expr '
    (33) expr -> . specialmatrixword ( expr )
    (34) expr -> . ( expr )
    (35) expr -> . [ matrixinitializer ]
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MTIMES expr
    (43) expr -> . expr MDIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr > expr
    (47) expr -> . expr < expr
    (48) expr -> . expr LEQ expr
    (49) expr -> . expr GEQ expr
    (14) returnstatement -> . RETURN
    (15) returnstatement -> . RETURN expr
    (21) assignstatement -> . assignable = expr
    (22) assignstatement -> . assignable ASSIGNPLUS expr
    (23) assignstatement -> . assignable ASSIGNMINUS expr
    (24) assignstatement -> . assignable ASSIGNTIMES expr
    (25) assignstatement -> . assignable ASSIGNDIVIDE expr
    (16) printstatement -> . PRINT printables
    (57) forloop -> . FOR ID = rangeoperator morestatements
    (58) whileloop -> . WHILE ( expr ) morestatements
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (50) specialmatrixword -> . ZEROS
    (51) specialmatrixword -> . ONES
    (52) specialmatrixword -> . EYE

    {               shift and go to state 4
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    IF              shift and go to state 13
    INTNUMBER       shift and go to state 18
    FLOATNUMBER     shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 14
    [               shift and go to state 22
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 27
    ID              shift and go to state 26
    ZEROS           shift and go to state 28
    ONES            shift and go to state 29
    EYE             shift and go to state 30

    morestatements                 shift and go to state 32
    statement                      shift and go to state 3
    ifstatement                    shift and go to state 5
    loop                           shift and go to state 6
    expr                           shift and go to state 7
    returnstatement                shift and go to state 8
    assignstatement                shift and go to state 9
    printstatement                 shift and go to state 10
    forloop                        shift and go to state 15
    whileloop                      shift and go to state 16
    assignable                     shift and go to state 17
    specialmatrixword              shift and go to state 21

state 5

    (6) statement -> ifstatement .

    {               reduce using rule 6 (statement -> ifstatement .)
    BREAK           reduce using rule 6 (statement -> ifstatement .)
    CONTINUE        reduce using rule 6 (statement -> ifstatement .)
    IF              reduce using rule 6 (statement -> ifstatement .)
    INTNUMBER       reduce using rule 6 (statement -> ifstatement .)
    FLOATNUMBER     reduce using rule 6 (statement -> ifstatement .)
    -               reduce using rule 6 (statement -> ifstatement .)
    (               reduce using rule 6 (statement -> ifstatement .)
    [               reduce using rule 6 (statement -> ifstatement .)
    RETURN          reduce using rule 6 (statement -> ifstatement .)
    PRINT           reduce using rule 6 (statement -> ifstatement .)
    FOR             reduce using rule 6 (statement -> ifstatement .)
    WHILE           reduce using rule 6 (statement -> ifstatement .)
    ID              reduce using rule 6 (statement -> ifstatement .)
    ZEROS           reduce using rule 6 (statement -> ifstatement .)
    ONES            reduce using rule 6 (statement -> ifstatement .)
    EYE             reduce using rule 6 (statement -> ifstatement .)
    $end            reduce using rule 6 (statement -> ifstatement .)
    }               reduce using rule 6 (statement -> ifstatement .)
    ELSE            reduce using rule 6 (statement -> ifstatement .)


state 6

    (7) statement -> loop .

    {               reduce using rule 7 (statement -> loop .)
    BREAK           reduce using rule 7 (statement -> loop .)
    CONTINUE        reduce using rule 7 (statement -> loop .)
    IF              reduce using rule 7 (statement -> loop .)
    INTNUMBER       reduce using rule 7 (statement -> loop .)
    FLOATNUMBER     reduce using rule 7 (statement -> loop .)
    -               reduce using rule 7 (statement -> loop .)
    (               reduce using rule 7 (statement -> loop .)
    [               reduce using rule 7 (statement -> loop .)
    RETURN          reduce using rule 7 (statement -> loop .)
    PRINT           reduce using rule 7 (statement -> loop .)
    FOR             reduce using rule 7 (statement -> loop .)
    WHILE           reduce using rule 7 (statement -> loop .)
    ID              reduce using rule 7 (statement -> loop .)
    ZEROS           reduce using rule 7 (statement -> loop .)
    ONES            reduce using rule 7 (statement -> loop .)
    EYE             reduce using rule 7 (statement -> loop .)
    $end            reduce using rule 7 (statement -> loop .)
    }               reduce using rule 7 (statement -> loop .)
    ELSE            reduce using rule 7 (statement -> loop .)


state 7

    (8) statement -> expr . ;
    (32) expr -> expr . '
    (36) expr -> expr . + expr
    (37) expr -> expr . - expr
    (38) expr -> expr . * expr
    (39) expr -> expr . / expr
    (40) expr -> expr . MPLUS expr
    (41) expr -> expr . MMINUS expr
    (42) expr -> expr . MTIMES expr
    (43) expr -> expr . MDIVIDE expr
    (44) expr -> expr . EQ expr
    (45) expr -> expr . NEQ expr
    (46) expr -> expr . > expr
    (47) expr -> expr . < expr
    (48) expr -> expr . LEQ expr
    (49) expr -> expr . GEQ expr

    ;               shift and go to state 33
    '               shift and go to state 34
    +               shift and go to state 35
    -               shift and go to state 36
    *               shift and go to state 37
    /               shift and go to state 38
    MPLUS           shift and go to state 39
    MMINUS          shift and go to state 40
    MTIMES          shift and go to state 41
    MDIVIDE         shift and go to state 42
    EQ              shift and go to state 43
    NEQ             shift and go to state 44
    >               shift and go to state 45
    <               shift and go to state 46
    LEQ             shift and go to state 47
    GEQ             shift and go to state 48


state 8

    (9) statement -> returnstatement . ;

    ;               shift and go to state 49


state 9

    (10) statement -> assignstatement . ;

    ;               shift and go to state 50


state 10

    (11) statement -> printstatement . ;

    ;               shift and go to state 51


state 11

    (12) statement -> BREAK . ;

    ;               shift and go to state 52


state 12

    (13) statement -> CONTINUE . ;

    ;               shift and go to state 53


state 13

    (53) ifstatement -> IF . ( expr ) morestatements
    (54) ifstatement -> IF . ( expr ) morestatements ELSE morestatements

    (               shift and go to state 54


state 14

    (34) expr -> ( . expr )
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . - expr
    (32) expr -> . expr '
    (33) expr -> . specialmatrixword ( expr )
    (34) expr -> . ( expr )
    (35) expr -> . [ matrixinitializer ]
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MTIMES expr
    (43) expr -> . expr MDIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr > expr
    (47) expr -> . expr < expr
    (48) expr -> . expr LEQ expr
    (49) expr -> . expr GEQ expr
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (50) specialmatrixword -> . ZEROS
    (51) specialmatrixword -> . ONES
    (52) specialmatrixword -> . EYE

    INTNUMBER       shift and go to state 18
    FLOATNUMBER     shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 14
    [               shift and go to state 22
    ID              shift and go to state 26
    ZEROS           shift and go to state 28
    ONES            shift and go to state 29
    EYE             shift and go to state 30

    expr                           shift and go to state 55
    assignable                     shift and go to state 56
    specialmatrixword              shift and go to state 21

state 15

    (55) loop -> forloop .

    {               reduce using rule 55 (loop -> forloop .)
    BREAK           reduce using rule 55 (loop -> forloop .)
    CONTINUE        reduce using rule 55 (loop -> forloop .)
    IF              reduce using rule 55 (loop -> forloop .)
    INTNUMBER       reduce using rule 55 (loop -> forloop .)
    FLOATNUMBER     reduce using rule 55 (loop -> forloop .)
    -               reduce using rule 55 (loop -> forloop .)
    (               reduce using rule 55 (loop -> forloop .)
    [               reduce using rule 55 (loop -> forloop .)
    RETURN          reduce using rule 55 (loop -> forloop .)
    PRINT           reduce using rule 55 (loop -> forloop .)
    FOR             reduce using rule 55 (loop -> forloop .)
    WHILE           reduce using rule 55 (loop -> forloop .)
    ID              reduce using rule 55 (loop -> forloop .)
    ZEROS           reduce using rule 55 (loop -> forloop .)
    ONES            reduce using rule 55 (loop -> forloop .)
    EYE             reduce using rule 55 (loop -> forloop .)
    $end            reduce using rule 55 (loop -> forloop .)
    }               reduce using rule 55 (loop -> forloop .)
    ELSE            reduce using rule 55 (loop -> forloop .)


state 16

    (56) loop -> whileloop .

    {               reduce using rule 56 (loop -> whileloop .)
    BREAK           reduce using rule 56 (loop -> whileloop .)
    CONTINUE        reduce using rule 56 (loop -> whileloop .)
    IF              reduce using rule 56 (loop -> whileloop .)
    INTNUMBER       reduce using rule 56 (loop -> whileloop .)
    FLOATNUMBER     reduce using rule 56 (loop -> whileloop .)
    -               reduce using rule 56 (loop -> whileloop .)
    (               reduce using rule 56 (loop -> whileloop .)
    [               reduce using rule 56 (loop -> whileloop .)
    RETURN          reduce using rule 56 (loop -> whileloop .)
    PRINT           reduce using rule 56 (loop -> whileloop .)
    FOR             reduce using rule 56 (loop -> whileloop .)
    WHILE           reduce using rule 56 (loop -> whileloop .)
    ID              reduce using rule 56 (loop -> whileloop .)
    ZEROS           reduce using rule 56 (loop -> whileloop .)
    ONES            reduce using rule 56 (loop -> whileloop .)
    EYE             reduce using rule 56 (loop -> whileloop .)
    $end            reduce using rule 56 (loop -> whileloop .)
    }               reduce using rule 56 (loop -> whileloop .)
    ELSE            reduce using rule 56 (loop -> whileloop .)


state 17

    (28) expr -> assignable .
    (21) assignstatement -> assignable . = expr
    (22) assignstatement -> assignable . ASSIGNPLUS expr
    (23) assignstatement -> assignable . ASSIGNMINUS expr
    (24) assignstatement -> assignable . ASSIGNTIMES expr
    (25) assignstatement -> assignable . ASSIGNDIVIDE expr

    ;               reduce using rule 28 (expr -> assignable .)
    '               reduce using rule 28 (expr -> assignable .)
    +               reduce using rule 28 (expr -> assignable .)
    -               reduce using rule 28 (expr -> assignable .)
    *               reduce using rule 28 (expr -> assignable .)
    /               reduce using rule 28 (expr -> assignable .)
    MPLUS           reduce using rule 28 (expr -> assignable .)
    MMINUS          reduce using rule 28 (expr -> assignable .)
    MTIMES          reduce using rule 28 (expr -> assignable .)
    MDIVIDE         reduce using rule 28 (expr -> assignable .)
    EQ              reduce using rule 28 (expr -> assignable .)
    NEQ             reduce using rule 28 (expr -> assignable .)
    >               reduce using rule 28 (expr -> assignable .)
    <               reduce using rule 28 (expr -> assignable .)
    LEQ             reduce using rule 28 (expr -> assignable .)
    GEQ             reduce using rule 28 (expr -> assignable .)
    =               shift and go to state 57
    ASSIGNPLUS      shift and go to state 58
    ASSIGNMINUS     shift and go to state 59
    ASSIGNTIMES     shift and go to state 60
    ASSIGNDIVIDE    shift and go to state 61


state 18

    (29) expr -> INTNUMBER .
